# easydb_app_AI

./: AGENTS.md  README.md  README_EN.md  package-lock.json  package.json
src/: main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  files.rs  mod.rs  query.rs
src-tauri/src/context/: context.rs
src/components/ai/: ai-settings-modal.tsx
src/contexts/: AiAssistantContext.ts  AiAssistantProvider.tsx  AiDataSourcesContext.tsx
src/hooks/: useAiAssistant.ts
src/pages/notebook/: index.tsx
src/pages/notebook/notebook-header/: notebook-header.tsx
src/pages/notebook/notebook-left/: notebook-left-source.tsx  notebook-left.tsx
src/pages/notebook/notebook-middle/: notebook-mddle-bottom.tsx  notebook-middle.tsx
src/pages/notebook/notebook-right/: notebook-right.tsx
src/services/: ai-assistant.ts
