[package]
name = "easydb_app"
version = "2.3.0"
description = "EasyDB APP"
authors = ["shencangsheng"]
license = "MIT"
repository = "https://github.com/shencangsheng/easydb_app"
edition = "2021"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
#crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
derive_more = { version = "2.0.1", features = ["full"] }
sqlparser = "0.54.0"
calamine = { version = "0.30.1", features = ["dates"] }
glob = "0.3.3"
tokio = "1.47.1"
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
dirs = "6.0.0"
datafusion = { version = "50.3.0", features = ["backtrace"] }
datafusion-table-providers = { version = "0.8.2", features = ["mysql"] }
async-recursion = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
